--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,7 +12,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   background-color: #070724;
-  background-image: url("../assets/background-stars.svg");
+  background-image: url("/assets/background-stars.svg");
   background-size: cover;
   color: #ffff;
 }
