--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,7 +11,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   background-color: #070724;
-  background-image: url("../assets/background-stars.svg");
+  /* background-image: url("../assets/background-stars.svg"); */
   background-size: cover;
   color: #ffff;
 }
@@ -25,8 +25,8 @@ a {
   box-sizing: border-box;
 }
 
-@layer base {
+/* @layer base {
   body {
     @apply bg-[url('../assets/background-stars.svg')];
   }
-}
+} */
